# lumivance

./: README.md  chapter_word_counts.md  count_words.py  deep_chapter_analysis_chapters_1_18.md  potential_characters.md  pyproject.toml  single_count.txt  story_arc_outline.md  word_counts.txt
bible/: bylaws.md  etymology.md  ideas.md  printer-questions.md
chapters/: 1860.md  1863.md  1877.md  1881.md  1895.md  1896.md  1899.md  1909.md  1917.md  1919.md  1921.md  1925.md  1928.md  1935-10-15.md  1936.md  1939.md  1943.md  1944.md  1945.md  1954.md  1955.md  1959.md  1963.md  1965.md  1967.md  1969.md  1971.md  1974.md  1980.md  1984.md  1988.md  1992.md  1995.md  2001.md  2008.md  2011.md  2016.md  2017.md  2018.md  2019.md  (+46 more)
draft/: chapter_01_1860.md  chapter_02_1863.md  chapter_03_1877.md  chapter_04_1881.md  chapter_05_1895.md  chapter_06_1896.md  chapter_07_1899.md  chapter_08_1909.md  chapter_09_1917.md  chapter_10_1919.md  chapter_11_1921.md  chapter_12_1925.md  chapter_13_1928.md  chapter_14_1936.md  chapter_15_1939.md  chapter_16_1943.md  chapter_17_1945.md  chapter_19_1954.md  chapter_20_1955.md  chapter_21_1959.md  chapter_22_1963.md  chapter_23_1965.md  chapter_24_1967.md  chapter_25_1969.md  chapter_26_1971.md  chapter_27_1974.md  chapter_28_1980.md  chapter_29_1984.md  chapter_30_1988.md  chapter_31_1992.md  chapter_32_1995.md  chapter_33_2001.md  chapter_34_2008.md  chapter_35_2011.md  chapter_36_2016.md  chapter_37_2018.md  chapter_38_2020.md  chapter_39_2021.md  chapter_40_2023.md  chapter_41_2024.md  (+1 more)
src/: ideas.md
tools/: check_dialogue.py  db.py  (+4 more)
(+121 files in other folders)
